--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.security:spring-security-crypto'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+        implementation 'org.springframework.boot:spring-boot-starter-websocket'
+        implementation 'com.google.code.gson:gson:2.7'
 }
 
 test {
